# secunda-tz

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  fill_db.sql  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
migrations/: env.py  script.py.mako
migrations/versions/: 205506c1fa26_init.py  4ee07a7b7ea2_init.py  add_organization_building_required.py  b1d299c63e9b_level_validation_trigger.py  fill_db_.py  funcs_trgs_init_functions_and_tirggers.py  init_init.py  search_vector_init_search_vectors_trigers.py  search_vector_init_search_vectors_triggers.py
src/: app.py  deps.py  settings.py
src/db/: __init__.py  deps.py  functions.py  triggers.py
src/db/models/: __init__.py  building.py  m2m.py  organization.py  specialization.py
src/models/: building.py  m2m.py  organization.py
src/repositories/: __init__.py  organization_repository.py
src/routers/: __init__.py  organizations.py
src/schemas/: __init__.py  organization.py  specialization.py
src/services/: __init__.py  organization_service.py
tests/: conftest.py
tests/repositories/: test_organization_repository.py
