[project]
name = "secunda-tz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "alembic-utils>=0.8.8",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "geoalchemy2>=0.18.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]
